# solar-system-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Camera.h  CelestialBody.h  Mesh.h  OpenGLRenderer.h  Renderer.h  Shader.h  ShadowMap.h  Simulation.h  SolarSystem.h  Sphere.h
shaders/: planet.frag  planet.vert  shadow_mapping.frag  sun.frag
src/: Camera.cpp  CelestialBody.cpp  Mesh.cpp  OpenGLRenderer.cpp  Renderer.cpp  Shader.cpp  ShadowMap.cpp  Simulation.cpp  SolarSystem.cpp  Sphere.cpp  main.cpp
